[tool.poetry]
name = "babyagi_task_initiator"
version = "0.1.0"
description = ""
authors = ["moarshy <marshath@gmail.com>"]
readme = "README.md"
packages = [
    {include = "babyagi_task_initiator", from="."}
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.0"
litellm = "^1.35.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"